feat: add MapStruct for DTO mapping
- Add MapStruct dependency and annotation processor
- Create UserMapper interface for User to UserResponse mapping
- Update UserSearcher and AllUsersSearcher to use UserMapper
- Update tests to mock UserMapper
- Refactor UsersResponseMother to use UserResponse constructor